--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,10 @@
 .m-box {
   display: block;
   width: 50px;
-  height: 50px; }
+  height: 50px;
+  background: red; }
 
 .test {
-  width: 150px; }
-  .test a {
-    font: 20px; }
+  width: 150px;
+  font-size: 20px;
+  display: flex; }
